[jpa] Added examples for Session #1